tests/miniJava/pos/001304_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( this ) if ( 0 ) { } else { } } }
