tests/miniJava/neg/006186_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { this while ( 0 ) { } } }
